--- a/src/InventoryManagementSystem/InventoryManagementSystem/InventoryManagementSystem.csproj
+++ b/src/InventoryManagementSystem/InventoryManagementSystem/InventoryManagementSystem.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Folder Include="Exceptions\" />
     <Folder Include="Ui\Consoles\" />
+    <Folder Include="Ui\Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
