--- a/InventoryManagementSystem/InventoryManagementSystem.csproj
+++ b/InventoryManagementSystem/InventoryManagementSystem.csproj
@@ -15,6 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="5.4.3" />
+    <PackageReference Include="PromptPlus" Version="4.2.0" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
