--- a/InventoryManagementSystem.Ui/InventoryManagementSystem.Ui.csproj
+++ b/InventoryManagementSystem.Ui/InventoryManagementSystem.Ui.csproj
@@ -1,7 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -9,12 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="5.4.3" />
+    <PackageReference Include="PromptPlus" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\InventoryManagementSystem.Core\InventoryManagementSystem.Core.csproj" />
-    <ProjectReference Include="..\InventoryManagementSystem.Services\InventoryManagementSystem.Services.csproj" />
-    <ProjectReference Include="..\InventoryManagementSystem.Ui\InventoryManagementSystem.Ui.csproj" />
   </ItemGroup>
 
 </Project>
